# tree-sitter-angelscript

./: .gitignore  Cargo.toml  LICENSE  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
examples/: sample.as
queries/: highlights.scm  tags.scm
src/: grammar.json  lib.rs  node-types.json  parser.c  scanner.c
test/corpus/: basics.txt  declarations.txt  expressions.txt  functions.txt  statements.txt  types.txt
