[package]
name = "tree-sitter-angelscript"
version = "0.1.0"
edition = "2024"
description = "AngelScript grammar for tree-sitter"
license = "BSD-3-Clause"
build = "build.rs"
include = [
  "build.rs",
  "src/lib.rs",
  "src/parser.c",
  "src/scanner.c",
  "src/tree_sitter/parser.h",
  "src/node-types.json",
  "queries/*.scm",
  "grammar.js",
]

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.26"
